compiling_error.txt
/Users/alex/fye19/CP2HP1_AWILL.cpp:29:28: error: use of undeclared identifier 'line'; did you mean 'file'?
    while (getline(myfile, line))
                           ^~~~
                           file
/Users/alex/fye19/CP2HP1_AWILL.cpp:16:8: note: 'file' declared here
string file,year,gender;
       ^
/Users/alex/fye19/CP2HP1_AWILL.cpp:31:15: error: use of undeclared identifier 'line'; did you mean 'file'?
      cout << line << '\n';
              ^~~~
              file
/Users/alex/fye19/CP2HP1_AWILL.cpp:16:8: note: 'file' declared here
string file,year,gender;
       ^
/Users/alex/fye19/CP2HP1_AWILL.cpp:35:5: error: 'break' statement not in loop or switch statement
    break;
    ^
3 errors generated.
